# selfheal_rag

./: .gitignore  README.md  main.py  pyproject.toml
postman/: self-healing-rag.postman_collection.json
src/: api.py  guardrails.py  ingest.py  rag_agent.py  retriever.py
tests/: test_ingest.py
